// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.ProgressBus alertPosition 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus alertPosition 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus alertPosition 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus alertPosition 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkGrammar 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkGrammar 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkGrammar 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkGrammar 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkHighlight 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkHighlight 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkHighlight 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkHighlight 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkSpaces 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkSpaces 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkSpaces 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkSpaces 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus className 1`] = `
<div
  className="uu5-bricks-progress-bus my-classname uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus content 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus content 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus content 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus content 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus controlled 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus controlled 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus controlled 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus controlled 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus default props 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus disabled 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-common-disabled uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus disabled 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus disabled 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus disabled 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-common-disabled uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus dynamic 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus dynamic 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus dynamic 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus dynamic 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus hidden 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-common-hidden uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus hidden 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus hidden 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus hidden 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-common-hidden uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus id 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus ignoreHTML 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus ignoreHTML 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus ignoreHTML 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus ignoreHTML 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus mainAttrs 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus name 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 5`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 6`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 7`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 8`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 9`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 10`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 11`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 12`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 13`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 14`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel 15`] = `""`;

exports[`UU5.Bricks.ProgressBus nestingLevel 16`] = `""`;

exports[`UU5.Bricks.ProgressBus nestingLevel 17`] = `""`;

exports[`UU5.Bricks.ProgressBus nestingLevel 18`] = `""`;

exports[`UU5.Bricks.ProgressBus nestingLevel 19`] = `""`;

exports[`UU5.Bricks.ProgressBus nestingLevel 20`] = `""`;

exports[`UU5.Bricks.ProgressBus noIndex 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-noindex uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus noIndex 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus noIndex 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus noIndex 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-noindex uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus position 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-left uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus position 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus position 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus position 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-right uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus position 5`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-right uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus position 6`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus pureRender 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus pureRender 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus pureRender 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus pureRender 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus selected 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-common-selected uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus selected 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus selected 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus selected 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-common-selected uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus style 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus style 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus style 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus style 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus textCorrector 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus textCorrector 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus textCorrector 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus textCorrector 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus tooltip 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;

exports[`UU5.Bricks.ProgressBus verticalPosition 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus verticalPosition 2`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-bottomnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus verticalPosition 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-bottomnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus verticalPosition 4`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;
